[gd_scene load_steps=2 format=3 uid="uid://dpvu5la03ewsy"]

[ext_resource type="Script" path="res://face_ui/eyebrow_select.gd" id="1_j0gjg"]

[node name="Node2D" type="Node2D"]
position = Vector2(-24, 0)
script = ExtResource("1_j0gjg")

[node name="1" type="Button" parent="."]
offset_left = 990.0
offset_top = 210.0
offset_right = 1047.0
offset_bottom = 241.0
scale = Vector2(2.64131, 1.5)
text = "mouth1
"

[node name="2" type="Button" parent="."]
offset_left = 992.0
offset_top = 277.0
offset_right = 1049.0
offset_bottom = 308.0
scale = Vector2(2.64131, 1.5)
text = "mouth2
"

[node name="3" type="Button" parent="."]
offset_left = 990.0
offset_top = 352.0
offset_right = 1047.0
offset_bottom = 383.0
scale = Vector2(2.64131, 1.5)
text = "mouth3
"

[node name="4" type="Button" parent="."]
offset_left = 990.0
offset_top = 410.0
offset_right = 1059.0
offset_bottom = 441.0
scale = Vector2(2.64131, 1.5)
text = "mouth4
"

[node name="L" type="Button" parent="."]
offset_left = 967.0
offset_top = 62.0
offset_right = 1036.0
offset_bottom = 93.0
scale = Vector2(1.34076, 1.5)
text = "Left
"

[node name="R" type="Button" parent="."]
offset_left = 1065.0
offset_top = 60.0
offset_right = 1134.0
offset_bottom = 91.0
scale = Vector2(1.34076, 1.5)
text = "Right
"

[node name="sliders" type="Node2D" parent="."]
position = Vector2(917, 563)
scale = Vector2(0.5, 0.5)

[node name="y" type="HSlider" parent="sliders"]
offset_left = -100.0
offset_top = -81.0
offset_right = 85.0
offset_bottom = -21.0
min_value = -233.0
max_value = 300.0

[node name="Label" type="Label" parent="sliders/y"]
layout_mode = 0
offset_left = -82.0
offset_top = -105.0
offset_right = 246.0
theme_override_font_sizes/font_size = 76
text = "down/up"

[node name="x" type="HSlider" parent="sliders"]
offset_left = -101.0
offset_top = 85.0
offset_right = 84.0
offset_bottom = 145.0
min_value = -275.0
max_value = 212.0

[node name="Label" type="Label" parent="sliders/x"]
layout_mode = 0
offset_left = -107.0
offset_top = -111.0
offset_right = 220.0
offset_bottom = -6.0
theme_override_font_sizes/font_size = 76
text = "right/left
"

[node name="rotate" type="HSlider" parent="sliders"]
offset_left = -72.0
offset_top = -244.0
offset_right = 113.0
offset_bottom = -184.0
min_value = -180.0
max_value = 180.0

[node name="Label" type="Label" parent="sliders/rotate"]
layout_mode = 0
offset_left = -24.0
offset_top = -106.0
offset_right = 203.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 76
text = "rotate"

[node name="sliders2" type="Node2D" parent="."]
visible = false
position = Vector2(917, 563)
scale = Vector2(0.5, 0.5)

[node name="y" type="HSlider" parent="sliders2"]
offset_left = -100.0
offset_top = -81.0
offset_right = 85.0
offset_bottom = -21.0
min_value = -233.0
max_value = 300.0
value = -145.0

[node name="Label" type="Label" parent="sliders2/y"]
layout_mode = 0
offset_left = -82.0
offset_top = -105.0
offset_right = 246.0
theme_override_font_sizes/font_size = 76
text = "down/up"

[node name="x" type="HSlider" parent="sliders2"]
offset_left = -101.0
offset_top = 85.0
offset_right = 84.0
offset_bottom = 145.0
min_value = -275.0
max_value = 212.0
value = -185.0

[node name="Label" type="Label" parent="sliders2/x"]
layout_mode = 0
offset_left = -107.0
offset_top = -111.0
offset_right = 220.0
offset_bottom = -6.0
theme_override_font_sizes/font_size = 76
text = "right/left
"

[node name="rotate" type="HSlider" parent="sliders2"]
offset_left = -72.0
offset_top = -244.0
offset_right = 113.0
offset_bottom = -184.0
min_value = -180.0
max_value = 180.0

[node name="Label" type="Label" parent="sliders2/rotate"]
layout_mode = 0
offset_left = -24.0
offset_top = -106.0
offset_right = 203.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 76
text = "rotate"

[connection signal="pressed" from="1" to="." method="a_on__pressed"]
[connection signal="pressed" from="2" to="." method="b_on__pressed"]
[connection signal="pressed" from="3" to="." method="c_on__pressed"]
[connection signal="pressed" from="4" to="." method="d_on__pressed"]
[connection signal="pressed" from="L" to="." method="_on_l_pressed"]
[connection signal="pressed" from="R" to="." method="_on_r_pressed"]
